# technesisbot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
bot/: config.py  dispatcher.py  logger.py  main.py
bot/callbacks/: __init__.py  cancel.py  files.py
bot/callbacks/actions/: __init__.py  cancel.py  files.py
bot/connections/: __init__.py  db.py  sites.py
bot/filters/: __init__.py  is_admin.py  is_testing_mode.py
bot/handlers/: admin.py  files.py  unknown.py
bot/keyboards/: __init__.py  _generate_inline_keyboard.py  cancel.py  files.py
bot/lang/: ru.py
bot/logs/: __init__.py  log_chat.py
bot/models/config/: __init__.py  database_params.py  env_settings.py
bot/models/db/: __init__.py
bot/models/db/tables/: __init__.py  base.py  record.py
bot/models/handlers/: __init__.py  send_file.py
